# maccam

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: PLANNING.md
src/maccam/: __init__.py  cli.py  config.py  recorder.py
