[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maccam"
version = "0.1.0"
description = "Command-line webcam recorder with motion detection"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "requests",
    "rich",
]

[project.scripts]
maccam = "maccam.cli:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
